log
Thu Apr 30 08:18:34 PM UTC 2026: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/60
6eb5924
Thu Apr 30 08:34:02 PM UTC 2026: 
 treemap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  6|7
total_score: 8/60
35de1a6
Thu Apr 30 08:38:49 PM UTC 2026: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|7
total_score: 8/60
9377557
Thu Apr 30 08:43:17 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 8/60
9f106d6
Thu Apr 30 08:44:15 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
90bc03f
Thu Apr 30 08:45:17 PM UTC 2026: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:122:25: error: expected ‘;’ before ‘}’ token
  122 |         return aux->pair
      |                         ^
      |                         ;
  123 |     }
      |     ~                    
089b5f7
Thu Apr 30 08:45:24 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
08eee93
Thu Apr 30 08:47:41 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
14a0faf
Thu Apr 30 08:49:25 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|7
total_score: 8/60
797e7c9
Thu Apr 30 08:50:20 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
7386e51
Thu Apr 30 08:51:43 PM UTC 2026: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
fd0f832
Thu Apr 30 08:52:24 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|7
total_score: 8/60
4fe616b
Thu Apr 30 08:57:09 PM UTC 2026: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|7
total_score: 8/60
8f87e3a
Thu Apr 30 08:57:46 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c09616b
